Fixed feeback, which included reusing validation for nodeIdReferences